Record instead of Tuple for checkMisspelledPlugin